--- a/SQL_login/SQL_login/MainWindow.xaml
+++ b/SQL_login/SQL_login/MainWindow.xaml
@@ -18,15 +18,16 @@
             <RowDefinition Height="25*"/>
             <RowDefinition Height="25*"/>
         </Grid.RowDefinitions>
-        <TextBox x:Name="tbxUser" Grid.Column="1" HorizontalAlignment="Left" Height="25" Margin="10,35,0,0" Grid.Row="1" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="180" TabIndex="0" ToolTip="Please Enter Your User Name"/>
-        
+        <TextBox x:Name="tbxUser" Grid.Column="1" HorizontalAlignment="Left" Height="25" Margin="25,46,0,0" Grid.Row="1" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="180" TabIndex="0" ToolTip="Please Enter Your User Name"/>
+
         <Button x:Name="btnLogin" Content="Login" HorizontalAlignment="Right" Margin="0,24,122,0" Grid.Row="3" VerticalAlignment="Top" Width="83" RenderTransformOrigin="4.948,0.675" Grid.Column="1" Click="btnLogin_Click" Height="30" />
         <Button x:Name="btnExit" Content="Exit" Margin="127,24,10,0" Grid.Row="3" VerticalAlignment="Top" RenderTransformOrigin="4.948,0.675" Grid.Column="1" Height="30" Click="btnExit_Click"/>
-        <TextBox x:Name="tbxPassword" Grid.Column="1" HorizontalAlignment="Left" Height="25" Margin="10,26,0,0" Grid.Row="2" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="180" TabIndex="1" ToolTip="Please Enter Your Password"/>
         <Label x:Name="lblUser" Content="User:" HorizontalAlignment="Left" Margin="10,32,0,0" Grid.Row="1" VerticalAlignment="Top" Width="50" FontWeight="Bold"/>
         <Label x:Name="lblPassword" Content="Password:" Margin="10,24,0,0" Grid.Row="2" VerticalAlignment="Top" FontWeight="Bold"/>
         <Image x:Name="image" Grid.Column="2" HorizontalAlignment="Left" Height="185" Margin="20,75,0,0" Grid.RowSpan="4" VerticalAlignment="Top" Width="176"/>
         <Label x:Name="label" Content="Please Enter Your User name and Password" HorizontalAlignment="Left" Margin="41,33,0,0" VerticalAlignment="Top" Grid.ColumnSpan="3" Width="423" FontWeight="Bold" FontSize="20"/>
+        <PasswordBox x:Name="tbxPassword" Grid.Column="1" HorizontalAlignment="Left" Margin="30,24,0,0" Grid.Row="2" VerticalAlignment="Top" Width="180"/>
+        <Label x:Name="lblError" Content="" Grid.Column="2" HorizontalAlignment="Left" Margin="57,24,0,0" Grid.Row="3" VerticalAlignment="Top" Width="146"/>
 
 
     </Grid>
