--- a/SQL_login/SQL_login/dashboard.xaml
+++ b/SQL_login/SQL_login/dashboard.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         Title="dashboard" Height="500" Width="500">
     <Grid>
-        
+        <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="242,189,0,0" VerticalAlignment="Top" Width="75" Click="button_Click"/>
+
     </Grid>
 </Window>
